# docstring2pdf

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  memo.md  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: actions.yml
docs/: how-it-works.md  how-to-install.md  how-to-introduce.md  how-to-use.md  index.md
docs/stylesheets/: base.css
how-it-works/: index.html
how-to-install/: index.html
how-to-introduce/: index.html
how-to-use/: index.html
license/: index.html
reference/SUMMARY/: index.html
reference/scripts/gen_ref_pages/: index.html
reference/scripts/inject_external_info/: index.html
reference/src/gen_ref_pages/: index.html
reference/src/inject_external_info/: index.html
scripts/: gen_ref_pages.py  inject_external_info.py
search/: search_index.json
src/: gen_ref_pages.py  inject_external_info.py
stylesheets/: base.css  material.css  mkdocstrings.css
